# prism

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEST_RESULTS.md  TEST_STATUS_SUMMARY.md  hello.py  output.txt  pyproject.toml  pytest.ini  sample_entities.json  test_input.txt  test_output.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
cache/: entities.json
src/: __init__.py
src/entity_resolution/: __init__.py  run_entity_resolution.py  telemetry.py  unified_system.py  validation.py
src/entity_resolution/database/: __init__.py  db.py  vector_store.py
src/entity_resolution/models/: __init__.py  atg.py  base_adapter.py  base_config.py  candidate_generation.py  candidate_generator.py  consensus.py  encoder.py  entity_encoder.py  output.py  processor.py  reader.py  resolution_processor.py  retriever.py
src/entity_resolution/models/adapters/: __init__.py  atg_adapter.py
src/entity_resolution/models/relik/: __init__.py  confidence_calibration.py  config.py  dynamic_index.py  hard_negative_mining.py  linker.py  model.py  reader.py  reader_improved.py  relation_extractor.py  retriever.py  tokenizer.py  unified_integration.py
src/entity_resolution/models/spel/: __init__.py  aggregation.py  candidate_sets.py  config.py  model.py
src/entity_resolution/models/unirel/: __init__.py  config.py  interaction_map.py  model.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/fixtures/: __init__.py
tests/fixtures/golden_outputs/: README.md  sample_1_input.json  sample_1_output.json  sample_2_input.json  sample_2_output.json  tolerance_config.json
tests/integration/: __init__.py  test_e2e_edge_cases.py  test_e2e_pipeline.py  test_golden_fixtures.py  test_pipeline.py  test_unified_relik_integration.py
tests/unit/: test_atg.py  test_dynamic_kb.py  test_output.py  test_relik.py  test_relik_advanced.py  test_relik_improved.py  test_spel.py  test_telemetry.py  test_unirel.py  test_validation.py  test_vector_store.py
