[project]
name = "musnad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.1",
    "faiss-cpu>=1.10.0",
    "filelock>=3.18.0",
    "numpy>=2.0.2",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "relink>=0.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
